--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.4.0'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    compile 'com.squareup:seismic:1.0.2'
 }
