Proper title in settings, protect against null restaurant

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <meta-data
@@ -48,6 +47,7 @@
 
         <activity
             android:name=".activities.SettingsActivity"
+            android:label="@string/settings"
             android:configChanges="orientation|screenSize">
         </activity>
     </application>
