Get toolbar for free, add search input view to filter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity
             android:name=".activities.FilterActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:windowSoftInputMode="stateAlwaysHidden">
         </activity>
 
         <activity
