--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             android:value="@string/google_maps_api_key"/>
 
         <activity
-            android:name="com.randomappsinc.instafood.activities.MainActivity">
+            android:name="com.randomappsinc.instafood.activities.MainActivity"
+            android:configChanges="orientation|screenSize">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
